working with database

--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server = . ; database = SurveyBasket ; Trusted_Connection = True ; Encrypt = False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
