--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtOptions": {
+    "Key": "this#$is^secret*keythis#$is^secret*keythis#$is^secret*key",
+    "Audience": "SurveyBasket App Users",
+    "Issuer": "SurveyBasket App",
+    "ExpiryMinute": 30
+  }
 }
