--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -2,12 +2,32 @@
   "ConnectionStrings": {
     "DefaultConnection": "server = . ; database = SurveyBasket ; Trusted_Connection = True ; Encrypt = False"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      } ,
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Logs\\log-.txt",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "SurveyBasket"
     }
   },
+
   "AllowedHosts": "*",
 
   "JwtOptions": {
