--- a/SurveyBasket.Api/appsettings.Development.json
+++ b/SurveyBasket.Api/appsettings.Development.json
@@ -9,15 +9,15 @@
     "WriteTo": [
       {
         "Name": "Console"
-      } ,
-      {
-        "Name": "File",
-        "Args": {
-          "path": "D:\\Logs\\log-.txt",
-          "rollingInterval": "Day",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter"
-        }
-      }
+      }// ,
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "D:\\Logs\\log-.txt",
+      //    "rollingInterval": "Day",
+      //    "formatter": "Serilog.Formatting.Json.JsonFormatter"
+      //  }
+      //}
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
