--- a/SurveyBasket.Api/appsettings.json
+++ b/SurveyBasket.Api/appsettings.json
@@ -12,15 +12,15 @@
     "WriteTo": [
       {
         "Name": "Console"
-      } ,
-      {
-        "Name": "File",
-        "Args": {
-          "path": "D:\\Logs\\log-.txt",
-          "rollingInterval": "Day",
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
-        }
-      }
+      } 
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "D:\\Logs\\log-.txt",
+      //    "rollingInterval": "Day",
+      //    "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+      //  }
+      //}
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
